--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,17 +1,33 @@
+// Define variables
+$mobile: 500px;
+$shade: rgba(2, 56, 84, 1);
+
+// General Styles
 body {
   padding: 0;
   margin: 0;
   font-size: 18px;
-  @media screen and (max-width: 500px) {
-    font-size: 14px;
+  overflow: hidden;
+  @media screen and (max-width: $mobile) {
+
   }
 }
-#flex-container {
-  position: absolute;
-  top: 0;
-  left: 0;
+
+a {
+  text-decoration: none;
+}
+
+#container {
+  display: flex;
+  width: 150%;
+  overflow: hidden;
+  position: relative;
+}
+
+// Main Styles
+.flex-container {
+  position: relative;
   box-sizing: border-box;
-  border: 10px solid white;
   width: 100%;
   height: 100vh;
   background-color: #3498db;
@@ -26,16 +42,25 @@ body {
     top: 20px;
     left: 20px;
     width: 200px;
+    @media screen and (max-width: $mobile) {
+      top: 15px;
+      left: 15px;
+      width: 180px;
+    }
     img {
       width: 100%;
     }
   }
   .nav-button {
     position: absolute;
-    top: 35px;
-    right: 35px;
-    width: 24px;
+    top: 40px;
+    right: 40px;
+    width: 20px;
     cursor: pointer;
+    @media screen and (max-width: $mobile) {
+      top: 30px;
+      right: 30px;
+    }
     span {
       display: block;
       background: white;
@@ -45,15 +70,14 @@ body {
     }
   }
   .button {
-    padding: 20px 30px;
+    padding: 15px 20px;
     background: white;
     cursor: pointer;
     text-transform: uppercase;
-    font-size: 0.8em;
+    font-size: 0.7em;
     font-weight: 600;
     border-radius: 30px;
     color: #3498db;
-    margin-bottom: 20px;
     transition: all 0.1s ease-in-out;
     &:hover {
       transform: translateY(-2px);
@@ -65,33 +89,83 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 500px;
+    min-height: 400px;
     max-width: 800px;
+    @media screen and (max-width: $mobile) {
+      padding: 0 40px;
+    }
     p {
       color: white;
       text-align: center;
-      font-size: 1.5em;
+      font-size: 1em;
+      max-width: 500px;
     }
     p.quote {
       display: flex;
       align-items: center;
       justify-content: center;
       font-weight: 200;
-      padding: 20px;
       letter-spacing: 1px;
       line-height: 26px;
     }
     p.name {
-      font-size: 1.1em;
-      padding: 10px 20px;
+      font-size: 0.8em;
+      padding: 10px 15px;
       border-radius: 2px;
       transition: all 0.2s ease-in-out;
+      margin-top: 0;
       &:hover {
         transform: translateY(-2px);
         box-shadow: 0 20px 20px -10px rgba(0, 0, 0, 0.2);
         cursor: pointer;
       }
     }
+  }
+}
+
+.menu {
+  display: flex;
+  height: 100vh;
+  width: 50%;
+  background: $shade;
+}
+
+.body-slide {
+  animation: body-slide 0.2s ease-in-out forwards;
+}
+
+@keyframes body-slide {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-30%);
+  }
+}
+
+.slide-back {
+  animation: slide-back 0.2s ease-in-out forwards;
+}
+
+@keyframes slide-back {
+  0% {
+    transform: translateX(-30%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.menu-slide {
+  animation: menu-slide 0.2s ease-in-out forwards;
+}
+
+@keyframes menu-slide {
+  0% {
+    right: -300px;
+  }
+  100% {
+    right: 0px;
   }
 }
 
