--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,12 +1,15 @@
 // Define variables
 $mobile: 500px;
+$mobile-small: 350px;
 $shade: rgba(2, 56, 84, 1);
+$shadows: 0px 20px 20px -10px rgba(0, 0, 0, 0.2);
 
 // General Styles
 body {
   padding: 0;
   margin: 0;
   font-size: 18px;
+  font-family: 'Open Sans', sans-serif;
   overflow: hidden;
   @media screen and (max-width: $mobile) {
 
@@ -17,26 +20,68 @@ a {
   text-decoration: none;
 }
 
-#container {
+.menu {
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
-  width: 150%;
-  overflow: hidden;
-  position: relative;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  height: 100vh;
+  background: $shade;
+  @media screen and (max-width: $mobile-small) {
+    width: 250px;
+  }
+  .me {
+    margin-top: 50px;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    background: white;
+    box-shadow: $shadows;
+  }
+  .description {
+    position: relative;
+    border-radius: 2px;
+    margin-top: 30px;
+    width: 70%;
+    padding: 20px;
+    background: white;
+    font-size: 0.9em;
+    font-weight: 600;
+    text-align: center;
+    box-shadow: $shadows;
+    &:before {
+      position: absolute;
+      top: -10px;
+      left: 45%;
+      height: 0;
+      width: 2px;
+      content: ' ';
+      border-right: 10px solid transparent;
+      border-left: 10px solid transparent;
+      border-bottom: 10px solid white;
+    }
+    p {
+      margin: 0;
+    }
+  }
 }
 
 // Main Styles
 .flex-container {
   position: relative;
   box-sizing: border-box;
-  width: 100%;
   height: 100vh;
   background-color: #3498db;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  font-family: 'Open Sans', sans-serif;
-  transition: background 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
   .title {
     position: absolute;
     top: 20px;
@@ -81,7 +126,7 @@ a {
     transition: all 0.1s ease-in-out;
     &:hover {
       transform: translateY(-2px);
-      box-shadow: 0 20px 20px -10px rgba(0, 0, 0, 0.2);
+      box-shadow: $shadows;
     }
   }
   .text-container {
@@ -123,23 +168,31 @@ a {
   }
 }
 
-.menu {
-  display: flex;
-  height: 100vh;
-  width: 50%;
-  background: $shade;
+.slide {
+  animation: slide 0.2s ease-in-out forwards;
 }
 
-.body-slide {
-  animation: body-slide 0.2s ease-in-out forwards;
-}
-
-@keyframes body-slide {
+@keyframes slide {
   0% {
-    transform: translateX(0);
+    margin-right: 0px;
+    margin-left: 0px;
   }
   100% {
-    transform: translateX(-30%);
+    margin-right: 300px;
+    margin-left: -300px;
+  }
+}
+
+@media screen and (max-width: $mobile-small) {
+  @keyframes slide {
+    0% {
+      margin-right: 0px;
+      margin-left: 0px;
+    }
+    100% {
+      margin-right: 250px;
+      margin-left: -250px;
+    }
   }
 }
 
@@ -149,23 +202,25 @@ a {
 
 @keyframes slide-back {
   0% {
-    transform: translateX(-30%);
+    margin-right: 300px;
+    margin-left: -300px;
   }
   100% {
-    transform: translateX(0);
+    margin-right: 0px;
+    margin-left: 0px;
   }
 }
 
-.menu-slide {
-  animation: menu-slide 0.2s ease-in-out forwards;
-}
-
-@keyframes menu-slide {
-  0% {
-    right: -300px;
-  }
-  100% {
-    right: 0px;
+@media screen and (max-width: $mobile-small) {
+  @keyframes slide-back {
+    0% {
+      margin-right: 250px;
+      margin-left: -250px;
+    }
+    100% {
+      margin-right: 0px;
+      margin-left: 0px;
+    }
   }
 }
 
