--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,10 +1,3 @@
-// Variables
-$mobile: 500px;
-$mobile-small: 350px;
-$shade: rgba(2, 56, 84, 1);
-$red: rgb(212, 76, 87);
-$shadows: 0px 20px 20px -10px rgba(0, 0, 0, 0.2);
-
 // General Styles
 body {
   padding: 0;
@@ -19,230 +12,8 @@ a {
   text-decoration: none;
 }
 
-// Main Styles
-.menu {
-  z-index: -1;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 300px;
-  height: 100vh;
-  background: $shade;
-  @media screen and (max-width: $mobile-small) {
-    width: 250px;
-  }
-  .me {
-    margin-top: 50px;
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    background: white;
-    box-shadow: $shadows;
-  }
-  .description {
-    position: relative;
-    border-radius: 2px;
-    margin-top: 30px;
-    width: 70%;
-    padding: 20px;
-    background: white;
-    font-size: 0.9em;
-    font-weight: 600;
-    text-align: center;
-    box-shadow: $shadows;
-    &:before {
-      position: absolute;
-      top: -10px;
-      left: 45%;
-      height: 0;
-      width: 2px;
-      content: ' ';
-      border-right: 10px solid transparent;
-      border-left: 10px solid transparent;
-      border-bottom: 10px solid white;
-    }
-    p {
-      margin: 0;
-      a {
-        color: $red;
-      }
-    }
-  }
-}
-
-// Main Styles
-.flex-container {
-  position: relative;
-  box-sizing: border-box;
-  height: 100vh;
-  background-color: #3498db;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  transition: all 0.5s ease-in-out;
-  .title {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    width: 200px;
-    @media screen and (max-width: $mobile) {
-      top: 15px;
-      left: 15px;
-      width: 180px;
-    }
-    img {
-      width: 100%;
-    }
-  }
-  .nav-button {
-    position: absolute;
-    top: 40px;
-    right: 40px;
-    width: 20px;
-    cursor: pointer;
-    @media screen and (max-width: $mobile) {
-      top: 30px;
-      right: 30px;
-    }
-    span {
-      display: block;
-      background: white;
-      height: 2px;
-      width: 100%;
-      margin-top: 5px;
-    }
-  }
-  .button {
-    padding: 15px 20px;
-    background: white;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-size: 0.7em;
-    font-weight: 600;
-    border-radius: 30px;
-    color: #3498db;
-    transition: all 0.1s ease-in-out;
-    &:hover {
-      transform: translateY(-2px);
-      box-shadow: $shadows;
-    }
-  }
-  .text-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 300px;
-    max-width: 800px;
-    @media screen and (max-width: $mobile) {
-      padding: 0 40px;
-    }
-    p {
-      color: white;
-      text-align: center;
-      font-size: 1em;
-      max-width: 500px;
-    }
-    p.quote {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: 600;
-      letter-spacing: 1px;
-      line-height: 26px;
-    }
-    p.name {
-      box-sizing: border-box;
-      font-size: 0.8em;
-      padding: 10px 15px;
-      border-radius: 2px;
-      transition: all 0.2s ease-in-out;
-      margin-top: 0;
-      &:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 20px 20px -10px rgba(0, 0, 0, 0.2);
-        cursor: pointer;
-      }
-    }
-  }
-}
-
-.slide {
-  animation: slide 0.2s ease-in-out forwards;
-}
-
-@keyframes slide {
-  0% {
-    margin-right: 0px;
-    margin-left: 0px;
-  }
-  100% {
-    margin-right: 300px;
-    margin-left: -300px;
-  }
-}
-
-@media screen and (max-width: $mobile-small) {
-  @keyframes slide {
-    0% {
-      margin-right: 0px;
-      margin-left: 0px;
-    }
-    100% {
-      margin-right: 250px;
-      margin-left: -250px;
-    }
-  }
-}
-
-.slide-back {
-  animation: slide-back 0.2s ease-in-out forwards;
-}
-
-@keyframes slide-back {
-  0% {
-    margin-right: 300px;
-    margin-left: -300px;
-  }
-  100% {
-    margin-right: 0px;
-    margin-left: 0px;
-  }
-}
-
-@media screen and (max-width: $mobile-small) {
-  @keyframes slide-back {
-    0% {
-      margin-right: 250px;
-      margin-left: -250px;
-    }
-    100% {
-      margin-right: 0px;
-      margin-left: 0px;
-    }
-  }
-}
-
-.border {
-  border: 2px solid white;
-}
-
-.comeOnIn {
-  animation: slideIn 0.5s ease-in-out forwards;
-}
-
-@keyframes slideIn {
-  0% {
-    opacity: 0;
-    transform: translateY(20%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0%);
-  }
-}
+// Imports
+@import 'variables';
+@import 'animations';
+@import 'menu';
+@import 'content';
