--- a/styles/_animations.scss
+++ b/styles/_animations.scss
@@ -54,9 +54,9 @@
   }
 }
 
-.border {
-  border: 2px solid white;
-}
+// .border {
+//   border: 2px solid white;
+// }
 
 .comeOnIn {
   animation: slideIn 0.5s ease-in-out forwards;
