--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -81,16 +81,25 @@
     }
     p.name {
       box-sizing: border-box;
+      border: 2px solid rgba(0,0,0,0);
       font-size: 0.8em;
       padding: 10px 15px;
       border-radius: 2px;
       transition: all 0.2s ease-in-out;
       margin-top: 0;
       &:hover {
+        border: 2px solid white;
         transform: translateY(-2px);
         box-shadow: 0 20px 20px -10px rgba(0, 0, 0, 0.2);
         cursor: pointer;
       }
     }
   }
+}
+
+.divider {
+  height: 2px;
+  width: 30px;
+  background: white;
+  margin: 20px 20px 10px;
 }
