--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -82,7 +82,7 @@
     p.name {
       box-sizing: border-box;
       border: 2px solid rgba(0,0,0,0);
-      font-size: 0.8em;
+      // font-size: 0.8em;
       padding: 10px 15px;
       border-radius: 2px;
       transition: all 0.2s ease-in-out;
