--- a/src/styles/_quote.scss
+++ b/src/styles/_quote.scss
@@ -7,7 +7,11 @@
   color: white;
   font-weight: bold;
   padding: 25px 15px 40px 25px;
+  min-height: 50vh;
+  overflow: scroll;
+  max-height: calc(100vh - 58px);
   @media screen and (min-width: $break-m) {
+    min-height: auto;
     padding: 100px 80px;
   }
   @media screen and (min-width: $break-m) {
@@ -44,9 +48,6 @@
     margin-top: 0;
     letter-spacing: 1px;
     max-width: 48rem;
-    @media screen and (min-width: $break-m) {
-      font-size: 2rem;
-    }
   }
   &--wrapper {
     position: relative;
@@ -58,8 +59,14 @@
   &--smaller {
     font-size: 1.6rem;
   }
-
   &--small {
     font-size: 1.4rem;
+  }
+  &--small,
+  &--smaller,
+  &--normal {
+    @media screen and (max-width: $break-m) {
+      font-size: 1.1rem;
+    }
   }
 }
