--- a/src/styles/_quoteSource.scss
+++ b/src/styles/_quoteSource.scss
@@ -25,8 +25,12 @@
       font-weight: 600;
       margin-bottom: 10px;
     }
+    span {
+      font-style: italic;
+    }
     p {
       max-width: 300px;
+      margin-top: 15px;
       margin-bottom: 15px;
     }
   }
